/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package settings;
option java_package = "bisq.settings.protobuf";
option java_multiple_files = true;
import "common.proto";

message CookieMapEntry {
  string key = 1;
  string value = 2;
  optional string subKey = 3;
}
message Cookie {
  repeated CookieMapEntry cookieMapEntries = 1;
}

enum ChatNotificationType {
  CHATNOTIFICATIONTYPE_UNSPECIFIED = 0;
  CHATNOTIFICATIONTYPE_ALL = 1;
  CHATNOTIFICATIONTYPE_MENTION = 2;
  CHATNOTIFICATIONTYPE_OFF = 3;
}

message SettingsStore {
  Cookie cookie = 1;
  map<string, bool> dontShowAgainMap = 2;
  bool useAnimations = 3;
  common.Market selectedMarket = 4;
  sint64 minRequiredReputationScore = 5;
  bool offersOnly = 6;
  bool tradeRulesConfirmed = 7;
  ChatNotificationType chatNotificationType = 8;
  bool isTacAccepted = 9;
  repeated string consumedAlertIds = 10;
  bool closeMyOfferWhenTaken = 11;
  string languageCode = 12;
  bool preventStandbyMode = 13;
  repeated string supportedLanguageCodes = 14;
  double difficultyAdjustmentFactor = 15;
  bool ignoreDiffAdjustmentFromSecManager = 16;
  repeated common.Market favouriteMarkets = 17;
  bool ignoreMinRequiredReputationScoreFromSecManager = 18;
  double maxTradePriceDeviation = 19;
  bool showBuyOffers = 20;
  bool showOfferListExpanded = 21;
  bool showMarketSelectionListCollapsed = 22;
  string backupLocation = 23;
}
